# ze-externals-sources

./: .gitattributes  Build-Base.sh  Build-Initialize.sh  Build-Windows-x64-VS2010.bat  Build-Windows-x64-VS2012.bat  Build-Windows-x86-VS2010.bat  Build-Windows-x86-VS2012.bat  Build.py  Build.sh  CMakeLists.txt  Check.bat  Version.txt  ZEBuild.py  build.bat  build.py  build_base.bat  build_check.bat  build_initialize.bat
Source/: Build-Source.sh  CMakeLists.txt  build.bat  build_source.bat
Source/_libTemplate/: Definition.txt
Source/libATICompress/: Build.py  Definition.txt  Version.txt  build.bat  build.py
Source/libAngelScript/: Build.sh  Definition.txt  Version.txt  build.bat  build.py
Source/libAngelScript/Patch/: CMakeLists.txt.patch
Source/libBullet/: Build.sh  Definition.txt  Version.txt  build.bat  build.py
Source/libBullet/Source/Glut/: glew32.lib
Source/libCG/: Build.py  Build.sh  Definition.txt  build.bat  build.py
Source/libClang/: Build.py  Version.txt
Source/libClang/Source/: CREDITS.TXT  Makefile  Makefile.config.in  Makefile.rules  README.txt  configure
Source/libClang/Source/autoconf/: README.TXT  config.guess  configure.ac
Source/libClang/Source/cmake/: config-ix.cmake
Source/libClang/Source/docs/: doxygen.cfg.in
Source/libClang/Source/lib/: Makefile
Source/libClang/Source/projects/: Makefile
Source/libClang/Source/test/: Makefile
Source/libClang/Source/tools/: Makefile
Source/libClang/Source/utils/: Makefile
Source/libCryptopp/: Build.py  Version.txt
Source/libCryptopp/Source/: CMakeLists.txt
Source/libCurl/: Build.py  Build.sh  Definition.txt  Version.txt  build.bat  build.py
Source/libCurl/Patches/: CMakeLists.txt.patch
Source/libCurl/Source/: CMakeLists.txt
Source/libCurl/Source/lib/: CMakeLists.txt
Source/libDirectX/: Build.py  Definition.txt  Version.txt  build.bat  build.py
Source/libDirectXTex/: Build.py  Version.txt
Source/libDirectXTex/Patch/: libDirectXTex.patch
Source/libDirectXTex/Source/: BC.h  CMakeLists.txt  DirectXTex.h  DirectXTexConvert.cpp  DirectXTexDDS.cpp
Source/libFreeImage/: Build.sh  Definition.txt  Version.txt  build.bat  build.py
Source/libFreeImage/Patches/: FreeImage.h.patch
Source/libFreeImage/Source/: CMakeLists.txt  FreeImage.2008.sln  FreeImage.2008.vcproj  FreeImage.2008.vcxproj  FreeImage.h
Source/libFreeImage/Source/FreeImage/: Plugin.cpp  PluginTIFF.cpp
Source/libFreeImage/Source/FreeImageToolkit/: CMakeLists.txt
Source/libFreeImage/Source/LibTIFF/: CMakeLists.txt
Source/libFreeImage/Source/Source/: FreeImage.h
Source/libFreeImageNew/: build.py
Source/libFreeImageNew/Source/: CMakeLists.txt
Source/libFreeImageNew/Source/FreeImage/: CMakeLists.txt
Source/libFreeImageNew/Source/LibJPEG/: CMakeLists.txt
Source/libFreeImageNew/Source/LibOpenJPEG/: CMakeLists.txt
Source/libFreeImageNew/Source/LibPNG/: CMakeLists.txt
Source/libFreeImageNew/Source/Metadata/: CMakeLists.txt
Source/libFreeImageNew/Source/ZLib/: CMakeLists.txt
Source/libFreeType/: Build.py  Version.txt  build.py
Source/libFreeType/Source/: CMakeLists.txt
Source/libGLEW/: Build.py  Version.txt
Source/libGLEW/Source/: CMakeLists.txt
Source/libISense/: Build.py  Version.txt
Source/libISense/Source/: CMakeLists.txt  isense.c  isense.h
Source/libLua/: Build.sh  Definition.txt  Version.txt  build.bat  build.py
Source/libLua/Source/: CMakeLists.txt
Source/libLua/Source/luafilesystem/: CMakeLists.txt  dist.info
Source/libLua/Source/luasocket/: CMakeLists.txt  dist.info
Source/libLua/Source/md5/: CMakeLists.txt  dist.info
Source/libLua/Source/src/: luaconf.h
Source/libLuaNew/: build.py
Source/libLuaNew/Source/: CMakeLists.txt
Source/libMSVCRv100/: Build.py  Version.txt
Source/libMSVCRv110/: Build.py  Version.txt
Source/libOGG/: Build.py  Build.sh  Definition.txt  Version.txt  build.bat
Source/libOGG/Source/: CMakeLists.txt
Source/libOGGVorbis/: build.py
Source/libOGGVorbis/Source/: CMakeLists.txt
Source/libOGGVorbis/Source/OGG/: CMakeLists.txt
Source/libOGGVorbis/Source/Vorbis/: CMakeLists.txt
Source/libOpenAL/: Build.py  Build.sh  Definition.txt  Version.txt  build.bat  build.py
Source/libPhysX/: Definition.txt
Source/libPhysX2/: Build.py  Definition.txt  Version.txt  build.bat  build.py
Source/libPhysX3/: Build.sh  Definition.txt  build.bat
Source/libQt/: Build.py  Build.sh  Definition.txt  Recipe.txt  Version.txt  build.bat  build.py
Source/libQt/Source/: .gitmodules  .tag  README  qt.pro
Source/libQt/Source/qtbase/: .tag  (+9 more)
Source/libRecastDetour/: Build.py  Version.txt
Source/libRecastDetour/Source/: CMakeLists.txt
Source/libTRE/: Build.py  Version.txt
Source/libTRE/Source/: CMakeLists.txt
Source/libTheora/: Build.py  Version.txt
Source/libTheora/Source/: CMakeLists.txt
Source/libTinyXML/: Build.py  Version.txt  build.py
Source/libTinyXML/Source/: CMakeLists.txt
Source/libToLuaCpp/: Definition.txt  build.bat
Source/libTootle/: Build.py  Version.txt
Source/libTootle/Source/: CMakeLists.txt
Source/libUnitTestCpp/: Definition.txt  build.bat
Source/libUnitTestCpp/Source/: TestUnitTest++.vsnet2005.vcproj  UnitTest++.vsnet2005.sln  UnitTest++.vsnet2005.vcproj
Source/libVRPN/: Build.py  Version.txt  build.py
Source/libVRPN/Source/: CMakeLists.txt
Source/libVectorNav/: Build.py  Version.txt
Source/libVectorNav/Patch/: vn100.h.patch  vn200.h.patch
Source/libVectorNav/Source/: CMakeLists.txt
Source/libVorbis/: Build.py  Build.sh  Definition.txt  Version.txt  build.bat
Source/libVorbis/Source/: CMakeLists.txt
Source/libXSens/: Build.py  Version.txt
Source/libXSens/Source/: CMakeLists.txt
Source/libZEPP/: Build.py  Version.txt
Source/libZLib/: Version.txt  build.py
Source/libZLib/Source/: CMakeLists.txt
Source/libmpg123/: Build.py  Build.sh  Definition.txt  Version.txt  Versiontxt  build.bat
Source/libmpg123/Source/: CMakeLists.txt  didi.txt
Source/libvrpn/: Build.sh  build.bat  build.py
Source/libzlib/: Build.sh  Definition.txt  build.bat  build.py
Source/libzlib/Source/: CMakeLists.txt
(+4021 files in other folders)
