add_subdirectory(lib3dsMax)
add_subdirectory(libBullet)
add_subdirectory(libCurl)
add_subdirectory(libDirectX)
add_subdirectory(libFreeImage)
add_subdirectory(libOGG)
add_subdirectory(libOpenAL)
add_subdirectory(libPhysX)
add_subdirectory(libQt)
add_subdirectory(libVorbis)
add_subdirectory(libzlib)
